# tensorflow-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yaml
examples/: MLProject  callbacks.yaml  conda_env.yaml  mnist.yaml  mnist_callbacks.yaml  mnist_model.py
examples/inc/: callbacks.yaml
examples/mlflow/: conda_env.yaml
src/: __init__.py  __main__.py  configuration.py
src/tfexp/: __init__.py  __main__.py  cli.py  configuration.py
src/tfexp/frameworks/: tensorflow.py
src/tfexp/utils/: __init__.py  custom_yaml_tags.py  date_time_path_formatter.py  extended_loader.py
test/: test_extended_loader.py  test_tfexp.py
