[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0.0"]

[project]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
dependencies = [
  "pyyaml >= 5",
  "tensorflow >= 2.8.*"
]
description = "Small framework to conduct tensorflow experiments, described in YAML files."
dynamic = ["version"]
license = {text = "Apache License 2.0"}
name = "tfexp"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
develop = [
  'autoflake',
  'black',
  'isort',
  'pre-commit',
  'pytest',
  'python-lsp-black',
  'python-lsp-server[all]',
  'tox'
]

[project.scripts]
tfexp = "tfexp.cli:cli"

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
# line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "tfexp.__version__"}
